# fstache

./: .envrc  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.codex/skills/grill-tests/: SKILL.md
.codex/skills/grill-tests/agents/: openai.yaml
.codex/skills/release-fstache/: SKILL.md
.codex/skills/release-fstache/scripts/: release.py
.github/workflows/: ci.yml  pages.yml  publish.yml
demo/: data.json  main.py  mustache_features.md
demo/templates/: blog.mustache  changelog.mustache  comparison.mustache  faqs.mustache  features.mustache  footer.mustache  header.mustache  hero.mustache  layout.mustache  main_content.mustache  node.mustache  pricing.mustache  sandbox.mustache  testimonials.mustache  tree_explorer.mustache
examples/: README.md
examples/fastapi/: README.md  app.py  pyproject.toml
examples/fastapi/templates/pages/: home.mustache
examples/fastapi/templates/partials/: nav.mustache
examples/flask/: README.md  app.py  pyproject.toml
examples/flask/templates/partials/: base_head.mustache
examples/starlette/: README.md  app.py  pyproject.toml
examples/starlette/templates/partials/: card.mustache
src/fstache/: __init__.py  _cli.py  _compiler.py  _factories.py  _inliner.py  _missing.py  _renderer.py
tests/: perf_test.py  render_helpers.py  test_cli.py  test_cli_e2e.py  test_compiler.py  test_factories.py  test_inliner.py  test_mustache_specs.py  test_partial_loader.py  test_partial_spec.py  test_properties.py  test_render_comments_delimiters.py  test_render_partials.py  test_render_section_lambdas.py  test_render_sections.py  test_render_variables.py  test_rendered_template.py
tests/fixtures/mustache-specs/: README.md  ~lambdas.json
