[build-system]
requires = ["uv_build>=0.11.25,<0.12"]
build-backend = "uv_build"

[project]
name = "fstache"
version = "0.1.5"
description = "Fast dependency-free, typed Mustache renderer for Python 3.12+"
readme = "README.md"
requires-python = ">=3.12"
license = "0BSD"
license-files = ["LICENSE"]
authors = [{ name = "vkorobkov" }]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.scripts]
fstache = "fstache._cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "chevron==0.14.0",
    "mstache==0.3.0",
    "pystache==0.6.8",
    "pytest",
    "ty"
]

[tool.uv]
exclude-newer = "24 hours"

[project.urls]
Homepage = "https://github.com/servletcloud/fstache"
Repository = "https://github.com/servletcloud/fstache"
Issues = "https://github.com/servletcloud/fstache/issues"
