[build-system]
requires = ["uv_build>=0.11.25,<0.12"]
build-backend = "uv_build"

[project]
name = "fstache"
version = "0.1.7"
description = "Fast dependency-free, typed Mustache renderer for Python 3.12+"
readme = "README.md"
requires-python = ">=3.12"
license = "0BSD"
license-files = ["LICENSE"]
authors = [{ name = "vkorobkov" }]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.scripts]
fstache = "fstache._cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "chevron==0.14.0",
    "hypothesis",
    "mstache==0.3.0",
    "mutmut==3.6.0",
    "pystache==0.6.8",
    "pytest",
    "ty"
]

[tool.uv]
exclude-newer = "24 hours"

[tool.mutmut]
source_paths = ["src/fstache"]
only_mutate = ["src/fstache/_renderer.py"]
pytest_add_cli_args_test_selection = [
    "tests/test_mustache_specs.py",
    "tests/test_partial_loader.py",
    "tests/test_partial_spec.py",
    "tests/test_properties.py",
    "tests/test_render_comments_delimiters.py",
    "tests/test_render_partials.py",
    "tests/test_render_section_lambdas.py",
    "tests/test_render_sections.py",
    "tests/test_render_variables.py",
    "tests/test_rendered_template.py",
]

[project.urls]
Homepage = "https://github.com/servletcloud/fstache"
Repository = "https://github.com/servletcloud/fstache"
Issues = "https://github.com/servletcloud/fstache/issues"
